--- a/Artzy - Web/about.html
+++ b/Artzy - Web/about.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Artzy - Sobre</title>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/style-sobre.css">
+    <title>Artzy - sobre</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4">
+                <li class="menu-sobre">
+                    <img src="src/sobre.png" class="sobre">
+                </li>
+            </div>
+            <div class="col-sm-4">
+                &nbsp;
+            </div>
+            <div class="col-sm-1">
+                <p>Sobre</p>
+            </div>
+            <div class="col-sm-1">
+                <p>Serviços</p>
+            </div>
+            <div class="col-sm-1">
+                <p>Assinaturas</p>
+            </div>
+            <div class="col-sm-1">
+                <p>Contato</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
