--- a/Artzy - Web/about.html
+++ b/Artzy - Web/about.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/bootstrap.css">
+    <title>Artzy - Sobre</title>
     <link rel="stylesheet" href="css/style-sobre.css">
-    <title>Artzy - sobre</title>
 </head>
 <body>
+    
     <div class="container">
         <div class="row">
             <div class="col-sm-4">
@@ -27,9 +27,7 @@
             <div class="col-sm-1">
                 <p>Assinaturas</p>
             </div>
-            <div class="col-sm-1">
-                <p>Contato</p>
-            </div>
+>
         </div>
     </div>
 </body>
