--- a/Artzy - Web/about.html
+++ b/Artzy - Web/about.html
@@ -11,24 +11,52 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-4">
-                <li class="menu-sobre">
+                <div class="menu-sobre">
                     <img src="src/sobre.png" class="sobre">
-                </li>
+                </div>
             </div>
-            <div class="col-sm-4">
-                &nbsp;
+            <div class="col-sm-8 align-items-center d-flex mt-5 justify-content-end"> 
+                <ul class="nav-menu">
+                    <li id="sob" class="menu-navsobre">
+                        <button>
+                            <p class="sobr">
+                                Sobre
+                            </p>
+                        </button>
+                    </li>
+                    <li id="ser" class="menu-navsobre">
+                        <button>
+                            <p class="sobr">
+                                Explore
+                            </p>
+                        </button>
+                    </li>
+                    <li id="ass" class="menu-navsobre">
+                        <button>
+                            <p class="sobr">
+                                Assinaturas
+                            </p>
+                        </button>
+                    </li>
+                    <li id="cont" class="menu-navsobre">
+                        <button>
+                            <p class="sobr">
+                                Contato
+                            </p>
+                        </button>
+                    </li>
+                </ul>
             </div>
-            <div class="col-sm-1">
-                <p>Sobre</p>
-            </div>
-            <div class="col-sm-1">
-                <p>Serviços</p>
-            </div>
-            <div class="col-sm-1">
-                <p>Assinaturas</p>
-            </div>
-            <div class="col-sm-1">
-                <p>Contato</p>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4 mt-5" >
+                <div class="qs">
+                    <h1>QUEM</h1>
+                    <br>
+                    <h1>SOMOS?</h1>
+                </div>
             </div>
         </div>
     </div>
