--- a/Artzy - Web/about.html
+++ b/Artzy - Web/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style-sobre.css">
+    <link rel="stylesheet" href="css/estilo.css">
     <title>Artzy - sobre</title>
 </head>
 <body>
@@ -49,16 +50,53 @@
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-4 mt-5" >
-                <div class="qs">
-                    <h1>QUEM</h1>
-                    <br>
-                    <h1>SOMOS?</h1>
-                </div>
-            </div>
+    
+    <div class="tx">
+        <div class="tx2">
+            <h1 >QUEM</h1>
+            <br>
+            <h1>SOMOS?</h1>
+        </div>
+        <div id="tx3" class="tx3">
+            <img src="src/1ºmenina.png" alt="">
+        </div>
+        <div class="qs">
+            <br>
+            <br>
+            <p>
+                A Artzy é uma plataforma para artistas independentes encontrarem um lugar seguro e prático para realizarem as suas comissões, nosso diferencial é nossa política de comissões sem taxas, o ganho seria totalmente do artista. 
+            </p>
+            <br>
+            <p>
+                Os artistas nos amam porque somos uma comunidade inclusiva e solidária. Nós os ajudamos a encontrar sua identidade por meio da autoexpressão. Fornecemos as ferramentas, os recursos e a exposição para permitir que eles se tornem artistas melhores e mais bem-sucedidos. Inspiramos as pessoas a criar arte alimentando sua criatividade. Não podemos evitar – ela corre em nossas veias e nos obriga a alimentá-la nos outros.
+            </p>
+            <br>
+            <p>
+                Essa é a Artzy.
         </div>
     </div>
+    <div class="bann">
+        <img src="src/2ºmeninas.png" alt="" style="margin-top: 150px; width: 98.9rem;">  
+    </div>
+    <div class="it1">
+        <div class="di">
+            <img src="src/ceuu.png" alt="" style="width: 30rem;">
+        </div>
+        <div class="es">
+            <p>DESENHO</p>
+            <br>
+        </div>
+        <div class="es2">
+            <p>DIGITAL</p>
+        </div>
+        <div class="tx1">
+            <p>
+                Renderizações de alta qualidade
+                    ótimas para wallpapers e posteres
+            </p>
+        </div>
+    </div>
+
+
 </body>
 </html>
