--- a/artzylari/Artzy - Web/about.html
+++ b/artzylari/Artzy - Web/about.html
@@ -53,9 +53,8 @@
     
     <div class="tx">
         <div class="tx2">
-            <h1 >QUEM</h1>
-            <br>
-            <h1>SOMOS?</h1>
+            <p>QUEM</p>
+            <p>SOMOS?</p>
         </div>
         <div id="tx3" class="tx3">
             <img src="src/1ºmenina.png" alt="">
@@ -79,20 +78,46 @@
         <img src="src/2ºmeninas.png" alt="" style="margin-top: 150px; width: 98.9rem;">  
     </div>
     <div class="it1">
-        <div class="di">
-            <img src="src/ceuu.png" alt="" style="width: 30rem;">
-        </div>
         <div class="es">
+            <img src="src/ceeu.webp" alt=""class="miku">
+        </div>
+
+        <span class="cli"><img src="src/pijm.png" alt=""></span>
+        <span class="cli2"><img src="src/pijm.png" alt=""></span>
+
+        <div class="di">
             <p>DESENHO</p>
             <br>
         </div>
-        <div class="es2">
+        <div class="di2">
             <p>DIGITAL</p>
         </div>
         <div class="tx1">
             <p>
                 Renderizações de alta qualidade
                     ótimas para wallpapers e posteres
+            </p>
+        </div>
+    </div>
+    <div class="item2">
+        <div class="esquerda2">
+            <img src="src/diabinho.jpg" alt=""class="dia">
+        </div>
+
+        <span class="clip2"><img src="src/pijm.png" alt=""></span>
+        <span class="clip3"><img src="src/pijm.png" alt=""></span>
+
+        <div class="direita2">
+            <p>DESENHO</p>
+            <br>
+        </div>
+        <div class="direita3">
+            <p>TRADICIONAL</p>
+        </div>
+        <div class="text2">
+            <p>
+                Se você quer ir para o lado mais tradicional da coisa, 
+                também te aceitamos de braços abertos
             </p>
         </div>
     </div>
