fiz muita coisa hoje

--- a/artzylari/Artzy - Web/about.html
+++ b/artzylari/Artzy - Web/about.html
@@ -196,10 +196,61 @@
         <span class="clip44"><img src="src/pijm.png" alt=""></span>
     </div>
 
-    <div class="as">
-        
-        <div class="assin">
+    <!-- /* 💦💦💦💦 ASSINATURAS 💦💦💦💦 */ -->
+
+    <div class="as">  
+       <div class="assin">
             <p>ASSINATURAS</p>
+        </div>
+        <div class="tet">
+            <p>Você não precisa necessariamente possuir uma assinatura para desfrutar da nossa plataforma, mas se quiser personalizações mais avançadas para seu perfil e alguns bônus, você pode escolher um dos nossos planos!</p>
+        </div> 
+    </div>
+
+<!-- /* 💦💦💦💦 PLANOS 💦💦💦💦 */ -->
+
+    <div class="plan">
+        <div class="ret"> 
+            <div class="ben">
+                <ul>
+                    <li>• GIF como foto de perfil e banner.</li>
+                    <li>• Badge de verificado.</li>
+                    <li>• Opções de desconto.</li>
+                    <li>• 250 ACoins mensais.</li>
+                    <li>• ArtBox com recursos com base no seu trabalho.</li>
+                </ul> 
+            </div>
+            <div class="ret2">
+                <span><img src="src/premium.png" alt="" class="premium" ></span>
+            </div>
+            <div class="p">
+                <p>Premium</p>
+            </div>
+        </div>
+        <div class="ret3">
+            <div class="ben2">
+                <ul>
+                    <li>• Customização Avançada do perfil.</li>
+                    <li>• GIF como foto de perfil e banner.</li>
+                    <li>• Opções maiores de desconto (50%).</li>
+                    <li>• 500 ACoins mensais.</li>
+                    <li>• ArtBox com itens do artista do mês.</li>
+                    <li>• Badges personalizados ao lado do nome de usuário.</li>
+                </ul> 
+            </div>
+            <div class="ret4">
+                <span><img src="src/CORE.png" alt="" class="core" ></span>
+            </div>
+            <div class="c">
+                <p>Core</p>
+            </div>
+        </div>
+    </div>
+    <!-- 💦💦💦💦 TRABALHE CONOSCO 💦💦💦💦 -->
+
+    <div class="tr">
+        <div id="lulu" class="lulu">
+            <img src="src/lululu.png" alt="">
         </div>
     </div>
 
