--- a/Artzy - Web/about.html
+++ b/Artzy - Web/about.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style-sobre.css">
-    <link rel="stylesheet" href="css/estilo.css">
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.2.0/uicons-bold-rounded/css/uicons-bold-rounded.css'>
     <title>Artzy - sobre</title>
 </head>
@@ -76,7 +75,7 @@
         </div>
     </div>
     <div class="bann">
-        <img src="src/2ºmeninas.png" alt="" style="margin-top: 150px; width: 98.9rem;">  
+        <img src="src/wawa.png" alt="" style="margin-top: 150px; width: 98.9rem;">  
 
         <div class="criat">
             <p>LIBERTE SUA</p>
@@ -327,7 +326,6 @@
         document.addEventListener("DOMContentLoaded", function() {
             var btn = document.getElementById("subir");
 
-            // Mostrar o botão quando o usuário rolar a página para baixo
             window.onscroll = function() {
                 if (document.documentElement.scrollTop > 2000) {
                     btn.style.display = "block";
@@ -336,7 +334,6 @@
                 }
             };
 
-            // Rolamento suave para o topo quando o botão é clicado
             btn.addEventListener("click", function() {
                 document.body.scrollTop = 0;
                 document.documentElement.scrollTop = 0;
